...

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_overview">Overview</string>

    <string name="undo">Undo</string>

    <string name="overview_toolbar_title_today">Today:</string>
    <string name="overview_empty_meals">You haven\'t eaten anything today yet.</string>
    <string name="overview_meal_remove_description">Remove this meal</string>
    <string name="overview_meal_edit_description">Edit meal</string>
    <string name="overview_meal_photo_description">Photography of a meal</string>
...
    <string name="add_ingredient_energy_density_error_zero">Amount must be greater than zero!</string>
    <string name="add_ingredient_search_name_desc">Search the Internet for this ingredient</string>
    <string name="add_ingredient_default_search_keywords">calories</string>
    <string name="add_ingredient_select_type_title">Select unit</string>

    <string name="tags_title">Categories</string>
    <string name="tags_new_tag_dialog">New category</string>
    <string name="tags_new_tag_hint">Category name</string>
    <string name="tags_remove_dialog_title">Remove category</string>
    <string name="tags_remove_information">This category is not empty. Do you really want to remove this category?</string>
    <string name="tags_no_tags_yet">You haven\'t added any categories yet.</string>
    <string name="tags_search_result_empty">No matching categories found.</string>
    <string name="tags_undo_delete_message">Category removed</string>
    <string name="tags_undo_add_message">New category added</string>
    <string name="tags_edit_tag_dialog">Edit category</string>
    <string name="tags_remove_description">Remove category</string>
    <string name="tags_edit_description">Edit category name</string>

    <string name="settings_title">Settings</string>
    <string name="settings_current_unit">Current unit:</string>
    <string name="settings_select_unit_dialog_title">Select unit</string>
    <string name="settings_unit_energy_title">Select preferred unit of energy</string>
    <string name="settings_unit_mass_title">Select preferred unit of mass</string>
    <string name="settings_unit_volume_title">Select preferred unit of volume</string>

    <string name="search_hint">Search</string>
    <string name="add_meal_name_breakfast">Breakfast</string>
    <string name="add_meal_name_lunch">Lunch</string>
    <string name="add_meal_name_dinner">Dinner</string>
    <string name="add_meal_name_supper">Supper</string>
    <string name="add_meal_time_desc">Meal time:</string>
    <string name="no_categories_to_display">No categories</string>
...
    <string name="add_weight_dialog_title">Enter today\'s weight</string>
    <string name="add_weight_dialog_hint">Enter weight</string>
    <string name="overview_fab_add_weight">Add today\'s weight</string>

    <string name="settings_category_calorie_tracking_units">Meal calories tracking units</string>
    <string name="settings_category_body_mass_tracking_unit">Body mass tracking units</string>
    <string name="settings_unit_body_mass">Select preferred unit of body mass</string>
</resources>
