<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tags_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.tags.view.TagsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Title"
                    android:layout_gravity="center_vertical"
                    android:text="@string/tags_title"/>

                <com.github.st1hy.countthemcalories.ui.core.tokensearch.TokenSearchView
                    android:id="@+id/tags_search_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|end" />
            </FrameLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/tags_content_frame"
        style="@style/ActivityContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" >
        <fragment
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.github.st1hy.countthemcalories.ui.activities.tags.view.TagsFragment"
            android:tag="tags content"
            tools:layout="@layout/tags_content"/>
    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/tags_fab_add_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@color/colorBackground"
        app:elevation="6dp"
        android:layout_gravity="bottom|center"
        app:fabSize="mini"
        app:layout_anchor="@+id/confirm_space"
        app:layout_anchorGravity="top|center_horizontal"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_add_24px" />

    <android.support.v4.widget.Space
        android:id="@+id/confirm_space"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        app:layout_anchor="@+id/tags_fab_confirm"
        app:layout_anchorGravity="top|center_horizontal"
        android:layout_gravity="top|center_horizontal" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/tags_fab_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:tint="@color/colorBackground"
        app:elevation="6dp"
        app:fabSize="normal"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_done_24px" />

</android.support.design.widget.CoordinatorLayout>