...
            android:id="@+id/tags_item_delete_frame"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/tags_item_delete"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/tags_remove_description"
                android:minWidth="80dp"
                android:tint="@color/colorBackground"
...
            android:id="@+id/tags_item_edit_frame"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorAccent">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/tags_item_edit"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/tags_edit_description"
                android:minWidth="80dp"
                android:tint="@color/colorBackground"
...
