<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingTop="?dialogPreferredPadding"
    android:paddingLeft="?dialogPreferredPadding"
    android:paddingRight="?dialogPreferredPadding"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/tags_dialog_name"
        android:orientation="vertical"
        android:hint="@string/tags_new_tag_hint"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:inputType="textCapSentences"
        android:lines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <requestFocus/>
    </EditText>
</FrameLayout>