<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="unit_gram" tools:ignore="MissingTranslation">g</string>
    <string name="unit_milliliter" tools:ignore="MissingTranslation">ml</string>
    <string name="unit_100_gram" tools:ignore="MissingTranslation">100 g</string>
    <string name="unit_100_milliliter" tools:ignore="MissingTranslation">100 ml</string>
    <string name="unit_oz" tools:ignore="MissingTranslation">oz</string>
    <string name="unit_fl_oz" tools:ignore="MissingTranslation">fl oz</string>

    <string name="unit_kcal" tools:ignore="MissingTranslation">kcal</string>
    <string name="unit_kj" tools:ignore="MissingTranslation">kJ</string>

    <string name="format_value_simple" tools:ignore="MissingTranslation,UnusedResources">%1$s %2$s</string>
    <string name="format_value_fraction" tools:ignore="MissingTranslation,UnusedResources">%1$s %2$s / %3$s</string>
    <string name="format_unit_fraction" tools:ignore="MissingTranslation,UnusedResources">%1$s / %2$s</string>

</resources>